--- a/samples/wifi/sr_coex/prj.conf
+++ b/samples/wifi/sr_coex/prj.conf
@@ -64,9 +64,9 @@ CONFIG_POSIX_MAX_FDS=16
 # Optimized networking settings for performance
 CONFIG_NET_TC_TX_COUNT=1
 CONFIG_NET_PKT_RX_COUNT=2
-CONFIG_NET_PKT_TX_COUNT=24
+CONFIG_NET_PKT_TX_COUNT=4
 CONFIG_NET_BUF_RX_COUNT=2
-CONFIG_NET_BUF_TX_COUNT=48
+CONFIG_NET_BUF_TX_COUNT=8
 CONFIG_HEAP_MEM_POOL_SIZE=200000
 CONFIG_NET_BUF_DATA_SIZE=1100
 
@@ -75,7 +75,7 @@ CONFIG_NET_BUF_DATA_SIZE=1100
 # CONFIG_STA_KEY_MGMT_WPA2=y
 # CONFIG_STA_KEY_MGMT_WPA2_256=y
 # CONFIG_STA_KEY_MGMT_WPA3=y
-CONFIG_STA_SAMPLE_SSID="Myssid"
+CONFIG_STA_SAMPLE_SSID="wifi_sr_coex_24"
 CONFIG_STA_SAMPLE_PASSWORD="Mypassword"
 
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.99"
