--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -132,10 +132,10 @@ CONFIG_NET_ZPERF=y
 # CONFIG_NET_TCP=y
 # CONFIG_NET_STATISTICS=y
 
-# CONFIG_NET_PKT_RX_COUNT=14
-# CONFIG_NET_PKT_TX_COUNT=14
-# CONFIG_NET_BUF_RX_COUNT=28
-# CONFIG_NET_BUF_TX_COUNT=28
+CONFIG_NET_PKT_RX_COUNT=2
+CONFIG_NET_PKT_TX_COUNT=8
+CONFIG_NET_BUF_RX_COUNT=2
+CONFIG_NET_BUF_TX_COUNT=16
 # CONFIG_NET_BUF_DATA_SIZE=1500
 # CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=4
 # CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=5
