--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -120,7 +120,9 @@ CONFIG_NRF700X_QSPI_LOW_POWER=n
 CONFIG_OT_ROLE_CLIENT=y
 CONFIG_OT_CHANNEL=18
 CONFIG_OT_PAN_ID=1
-
+CONFIG_OT_PACKET_SIZE=256
+CONFIG_OT_RATE_BPS=10000
+CONFIG_OT_ZPERF_DURATION=1
 
 # CONFIG_NETWORKING=y
 CONFIG_NET_ZPERF=y
