--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -62,10 +62,22 @@ CONFIG_POSIX_MAX_FDS=16
 
 # Optimized networking settings for performance
 CONFIG_NET_TC_TX_COUNT=1
-CONFIG_NET_PKT_RX_COUNT=2
+#------------------------- UDP client
+#CONFIG_NET_PKT_RX_COUNT=2
+#CONFIG_NET_PKT_TX_COUNT=8
+#CONFIG_NET_BUF_RX_COUNT=2
+#CONFIG_NET_BUF_TX_COUNT=16
+#------------------------- UDP server
+#CONFIG_NET_PKT_RX_COUNT=8
+#CONFIG_NET_PKT_TX_COUNT=8
+#CONFIG_NET_BUF_RX_COUNT=8
+#CONFIG_NET_BUF_TX_COUNT=16
+#------------------------- TCP client and server
+CONFIG_NET_PKT_RX_COUNT=8
 CONFIG_NET_PKT_TX_COUNT=8
-CONFIG_NET_BUF_RX_COUNT=2
+CONFIG_NET_BUF_RX_COUNT=8
 CONFIG_NET_BUF_TX_COUNT=16
+#-------------------------
 CONFIG_HEAP_MEM_POOL_SIZE=200000
 CONFIG_NET_BUF_DATA_SIZE=1100
 
@@ -117,6 +129,7 @@ CONFIG_NRF_WIFI_LOW_POWER=y
 
 CONFIG_NRF700X_QSPI_LOW_POWER=n
 
+#================================
 CONFIG_OT_ROLE_CLIENT=y
 CONFIG_OT_CHANNEL=18
 CONFIG_OT_PAN_ID=1
@@ -126,7 +139,7 @@ CONFIG_OT_ZPERF_DURATION=1
 
 # CONFIG_NETWORKING=y
 CONFIG_NET_ZPERF=y
-# CONFIG_NET_LOG=y
+CONFIG_NET_LOG=y
 # CONFIG_NET_IPV6=y
 # CONFIG_NET_IPV4=y
 # CONFIG_NET_DHCPV4=n
@@ -134,10 +147,6 @@ CONFIG_NET_ZPERF=y
 # CONFIG_NET_TCP=y
 # CONFIG_NET_STATISTICS=y
 
-CONFIG_NET_PKT_RX_COUNT=2
-CONFIG_NET_PKT_TX_COUNT=8
-CONFIG_NET_BUF_RX_COUNT=2
-CONFIG_NET_BUF_TX_COUNT=16
 # CONFIG_NET_BUF_DATA_SIZE=1500
 # CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=4
 # CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=5
