--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -63,15 +63,15 @@ CONFIG_POSIX_MAX_FDS=16
 # Optimized networking settings for performance
 CONFIG_NET_TC_TX_COUNT=1
 #------------------------- UDP client
-#CONFIG_NET_PKT_RX_COUNT=2
-#CONFIG_NET_PKT_TX_COUNT=8
-#CONFIG_NET_BUF_RX_COUNT=2
-#CONFIG_NET_BUF_TX_COUNT=16
+CONFIG_NET_PKT_RX_COUNT=2
+CONFIG_NET_PKT_TX_COUNT=8
+CONFIG_NET_BUF_RX_COUNT=2
+CONFIG_NET_BUF_TX_COUNT=16
 #------------------------- UDP server
-CONFIG_NET_PKT_RX_COUNT=8
-CONFIG_NET_PKT_TX_COUNT=2
-CONFIG_NET_BUF_RX_COUNT=8
-CONFIG_NET_BUF_TX_COUNT=4
+#CONFIG_NET_PKT_RX_COUNT=8
+#CONFIG_NET_PKT_TX_COUNT=2
+#CONFIG_NET_BUF_RX_COUNT=8
+#CONFIG_NET_BUF_TX_COUNT=4
 #------------------------- TCP client and server
 #CONFIG_NET_PKT_RX_COUNT=8
 #CONFIG_NET_PKT_TX_COUNT=8
@@ -87,7 +87,7 @@ CONFIG_STA_KEY_MGMT_NONE=y
 # CONFIG_STA_KEY_MGMT_WPA2_256=y
 # CONFIG_STA_KEY_MGMT_WPA3=y
 CONFIG_STA_SSID="wifi_sr_coex_24"
-CONFIG_STA_PASSWORD="Mypassword"
+CONFIG_STA_PASSWORD="12345678"
 
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.99"
 CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
@@ -135,7 +135,7 @@ CONFIG_OT_CHANNEL=18
 CONFIG_OT_PAN_ID=1
 CONFIG_OT_PACKET_SIZE=256
 CONFIG_OT_RATE_BPS=10000
-CONFIG_OT_ZPERF_DURATION=1
+CONFIG_OT_ZPERF_DURATION=60
 
 # CONFIG_NETWORKING=y
 CONFIG_NET_ZPERF=y
@@ -166,3 +166,4 @@ CONFIG_NET_SHELL=y
 
 # CONFIG_LOG=y
 # CONFIG_SHELL_CMDS_RESIZE=n
+#=================================
