samples: wifi: thread_coex: SHEL-2395
Modifications for SHEL-2395.

Signed-off-by: Murali Thokala <Murali.Thokala@nordicsemi.no>

--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -81,8 +81,7 @@ CONFIG_WIFI_ZPERF_PKT_SIZE=1024
 CONFIG_WIFI_ZPERF_RATE=15000
 
 CONFIG_NRF700X_MAX_TX_PENDING_QLEN=12
-CONFIG_OT_EXTERNAL_ANTENNA=n
-CONFIG_COEX_TEST_DURATION=60000
+CONFIG_COEX_TEST_DURATION=30000
 
 #CONFIG_WPA_SUPP_LOG_LEVEL_DBG=y
 
@@ -97,8 +96,8 @@ CONFIG_NRF700X_QSPI_LOW_POWER=n
 CONFIG_OT_CHANNEL=18
 CONFIG_OT_PAN_ID=1
 CONFIG_OT_PACKET_SIZE=256
-CONFIG_OT_RATE_BPS=10000
-CONFIG_OT_ZPERF_DURATION=60
+#CONFIG_OT_RATE_BPS=250000 # messages dropped at client
+CONFIG_OT_RATE_BPS=80000
 
 # CONFIG_NETWORKING=y
 CONFIG_NET_ZPERF=y
