samples: wifi: thread_coex: Add Thread zperf APIs
Thread zperf throughput without shell commands.

Signed-off-by: Murali Thokala <Murali.Thokala@nordicsemi.no>

--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -97,14 +97,14 @@ CONFIG_OT_CHANNEL=18
 CONFIG_OT_PAN_ID=1
 CONFIG_OT_PACKET_SIZE=256
 #CONFIG_OT_RATE_BPS=250000 # messages dropped at client
-CONFIG_OT_RATE_BPS=80000
+CONFIG_OT_RATE_BPS=10000
 
 # CONFIG_NETWORKING=y
 CONFIG_NET_ZPERF=y
 CONFIG_NET_LOG=y
 
 # CONFIG_NET_L2_ETHERNET=y
-CONFIG_NET_SHELL=y
+#CONFIG_NET_SHELL=y # APIs are added for zperf Tx,Rx.
 
 # To handle multiple interfaces.
 CONFIG_NET_CONFIG_SETTINGS=y
