--- a/samples/wifi/thread_coex/CMakeLists.txt
+++ b/samples/wifi/thread_coex/CMakeLists.txt
@@ -13,6 +13,7 @@ project(nrf_wifi_thread_coex)
 
 target_sources(app PRIVATE
 	src/ot_utils.c
+	src/zperf_utils.c
 	src/ot_coex_functions.c
 	src/main.c
 )
