samples: wifi: thread_coex: Add Thread zperf APIs
Add otThreadDetachGracefully() the exit function that avoids coredump error.
But still observing wifi related initialization errors.

WiFi connection is moved up (before OT init) in the test bench.

Signed-off-by: Murali Thokala <Murali.Thokala@nordicsemi.no>

--- a/samples/wifi/thread_coex/Kconfig
+++ b/samples/wifi/thread_coex/Kconfig
@@ -6,7 +6,7 @@
 
 source "Kconfig.zephyr"
 
-menu "Nordic Coex sample"
+menu "WiFi and Thread Coex sample"
 
 # Wi-Fi configurations
 config STA_SSID
@@ -149,6 +149,6 @@ config COEX_TEST_DURATION
 	default 20000
 
 config COEX_SEP_ANTENNAS
-	bool "Control if the antennas are shared/serparate for Thread and WLAN"
+	bool "No support for shared antenna in Thread and WLAN. Set it to yes"
 	default y
 endmenu
