--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -22,7 +22,6 @@ CONFIG_NET_UDP=y
 CONFIG_NET_TCP=y
 CONFIG_NET_DHCPV4=y
 
-
 CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=2
 CONFIG_NET_MAX_CONTEXTS=8
 CONFIG_NET_CONTEXT_SYNC_RECV=y
@@ -33,8 +32,6 @@ CONFIG_NET_L2_ETHERNET=y
 
 CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_INIT_TIMEOUT=0
-
-
 
 # Memories
 CONFIG_MAIN_STACK_SIZE=4096
@@ -81,32 +78,25 @@ CONFIG_WIFI_ZPERF_PKT_SIZE=1024
 CONFIG_WIFI_ZPERF_RATE=15000
 
 CONFIG_NRF700X_MAX_TX_PENDING_QLEN=12
-CONFIG_COEX_TEST_DURATION=30000
+CONFIG_NRF_WIFI_LOW_POWER=y
+CONFIG_NRF700X_QSPI_LOW_POWER=n
 
-#CONFIG_WPA_SUPP_LOG_LEVEL_DBG=y
-
-#CONFIG_PM=y
 CONFIG_LOG_BUFFER_SIZE=2048
 CONFIG_NET_MGMT_EVENT_QUEUE_TIMEOUT=5000
 
-CONFIG_NRF_WIFI_LOW_POWER=y
-
-CONFIG_NRF700X_QSPI_LOW_POWER=n
-
+# Thread configurations
 CONFIG_OT_CHANNEL=18
 CONFIG_OT_PAN_ID=1
 CONFIG_OT_PACKET_SIZE=256
-#CONFIG_OT_RATE_BPS=250000 # messages dropped at client
 CONFIG_OT_RATE_BPS=10000
 
 # CONFIG_NETWORKING=y
 CONFIG_NET_ZPERF=y
 CONFIG_NET_LOG=y
 
-# CONFIG_NET_L2_ETHERNET=y
-#CONFIG_NET_SHELL=y # APIs are added for zperf Tx,Rx.
-
 # To handle multiple interfaces.
 CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_INIT_TIMEOUT=0
 CONFIG_NET_CONFIG_AUTO_INIT=n
+
+CONFIG_COEX_TEST_DURATION=30000
