--- a/samples/wifi/thread_coex_server/prj.conf
+++ b/samples/wifi/thread_coex_server/prj.conf
@@ -67,7 +67,7 @@ CONFIG_STA_KEY_MGMT_NONE=y
 # CONFIG_STA_KEY_MGMT_WPA2_256=y
 # CONFIG_STA_KEY_MGMT_WPA3=y
 CONFIG_STA_SSID="wifi_sr_coex_24"
-CONFIG_STA_PASSWORD="12345678"
+CONFIG_STA_PASSWORD="Mypassword"
 
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.99"
 CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
