samples: wifi: ble_coex: driver support revamp
[SHEL-2535] Rename missed bt* to sr*. Avoid duplication of functions.

Signed-off-by: Murali Thokala <Murali.Thokala@nordicsemi.no>

--- a/dts/bindings/radio_coex/nordic,nrf700x-coex.yaml
+++ b/dts/bindings/radio_coex/nordic,nrf700x-coex.yaml
@@ -36,7 +36,7 @@ properties:
             GPIO of the SOC controlling the Priority (STATUS1) pin (in 4-wire
             coex case) of the nRF7002
 
-    btrf-switch-gpios:
+    srrf-switch-gpios:
         type: phandle-array
         required: false
         description: |
