--- a/drivers/wifi/nrf700x/Kconfig
+++ b/drivers/wifi/nrf700x/Kconfig
@@ -241,9 +241,9 @@ config NRF700X_ON_SPI
 	def_bool $(dt_compat_enabled,$(DT_COMPAT_NORDIC_NRF700X_SPI))
 	select SPI
 
-# RF switch based coexistence
+# Include/exclude GPIO configuration to control SR side switch position.
 config NRF700X_RADIO_COEX
-	def_bool $(dt_nodelabel_has_prop,nrf_radio_coex,btrf-switch-gpios)
+	def_bool $(dt_nodelabel_has_prop,nrf_radio_coex,srrf-switch-gpios)
 
 config NRF700X_WORKQ_STACK_SIZE
 	int "Stack size for workqueue"
@@ -261,6 +261,7 @@ config NRF700X_UTIL
 	depends on SHELL
 	bool "Enable Utility shell in nRF700x driver"
 
+# Configure the coexistence hardware
 config NRF700X_SR_COEX
 	bool "Enable Wi-Fi and SR coexistence support"
 	default y if SOC_NRF5340_CPUAPP_QKAA
