--- a/samples/wifi/thread_coex/overlay-wifi-udp-client-thread-udp-server.conf
+++ b/samples/wifi/thread_coex/overlay-wifi-udp-client-thread-udp-server.conf
@@ -11,3 +11,8 @@ CONFIG_WIFI_ZPERF_SERVER=n
 # Thread zperf configuration
 CONFIG_OT_ZPERF_PROT_UDP=y
 CONFIG_OT_ROLE_CLIENT=n
+
+# control L2 log level
+CONFIG_OPENTHREAD_L2_LOG_LEVEL_OFF=y
+CONFIG_IEEE802154_DRIVER_LOG_LEVEL_OFF=y
+CONFIG_NET_PKT_LOG_LEVEL_OFF=y
