--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2023 Nordic Semiconductor ASA
+# Copyright (c) 2024 Nordic Semiconductor ASA
 #
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
@@ -61,19 +61,19 @@ CONFIG_NET_TC_TX_COUNT=1
 CONFIG_HEAP_MEM_POOL_SIZE=200000
 CONFIG_NET_BUF_DATA_SIZE=1100
 
-# Below configs need to be modified based on security
-CONFIG_STA_KEY_MGMT_NONE=y
+# Below Wi-Fi configs need to be modified based on security
+# CONFIG_STA_KEY_MGMT_NONE=y
 # CONFIG_STA_KEY_MGMT_WPA2=y
 # CONFIG_STA_KEY_MGMT_WPA2_256=y
 # CONFIG_STA_KEY_MGMT_WPA3=y
-CONFIG_STA_SSID="wifi_sr_coex_24"
+CONFIG_STA_SSID="Myssid"
 CONFIG_STA_PASSWORD="Mypassword"
 
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.99"
 CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
 CONFIG_NET_CONFIG_MY_IPV4_GW="192.168.1.1"
 
-# DUT zperf configuration
+# DUT Wi-Fi zperf configuration
 CONFIG_WIFI_ZPERF_PKT_SIZE=1024
 CONFIG_WIFI_ZPERF_RATE=10000
 
@@ -99,4 +99,5 @@ CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_INIT_TIMEOUT=0
 CONFIG_NET_CONFIG_AUTO_INIT=n
 
+# test duration in milliseconds
 CONFIG_COEX_TEST_DURATION=30000
