--- a/samples/wifi/thread_coex/sample.yaml
+++ b/samples/wifi/thread_coex/sample.yaml
@@ -8,7 +8,7 @@ tests:
     integration_platforms:
       - nrf7002dk_nrf5340_cpuapp
     extra_args: CONFIG_MPSL_CX=y 802154_rpmsg_CONFIG_MPSL_CX=y
-                CONFIG_COEX_SEP_ANTENNAS=y
+                CONFIG_COEX_SEP_ANTENNAS=y OVERLAY_CONFIG="overlay-openthread.conf overlay-wifi-udp-client-thread-udp-client.conf"
     platform_allow: nrf7002dk_nrf5340_cpuapp
     tags: ci_build
   sample.nrf7001.thread_coex:
@@ -16,7 +16,7 @@ tests:
     integration_platforms:
       - nrf7002dk_nrf7001_nrf5340_cpuapp
     extra_args: CONFIG_MPSL_CX=y 802154_rpmsg_CONFIG_MPSL_CX=y
-                CONFIG_COEX_SEP_ANTENNAS=y
+                CONFIG_COEX_SEP_ANTENNAS=y OVERLAY_CONFIG="overlay-openthread.conf overlay-wifi-udp-client-thread-udp-client.conf"
     platform_allow: nrf7002dk_nrf7001_nrf5340_cpuapp
     tags: ci_build
   # Daughter boards (EK's/EB's) do not have a shared antenna
@@ -26,7 +26,7 @@ tests:
       - nrf5340dk_nrf5340_cpuapp
     extra_args: SHIELD=nrf7002ek 802154_rpmsg_SHIELD=nrf7002ek_coex
                 CONFIG_MPSL_CX=y 802154_rpmsg_CONFIG_MPSL_CX=y
-                CONFIG_COEX_SEP_ANTENNAS=y
+                CONFIG_COEX_SEP_ANTENNAS=y OVERLAY_CONFIG="overlay-openthread.conf overlay-wifi-udp-client-thread-udp-client.conf"
     platform_allow: nrf5340dk_nrf5340_cpuapp
     tags: ci_build
   sample.nrf7001ek.thread_coex:
@@ -35,13 +35,14 @@ tests:
       - nrf5340dk_nrf5340_cpuapp
     extra_args: SHIELD=nrf7002ek_nrf7001 802154_rpmsg_SHIELD=nrf7002ek_nrf7001_coex
                 CONFIG_MPSL_CX=y 802154_rpmsg_CONFIG_MPSL_CX=y
-                CONFIG_COEX_SEP_ANTENNAS=y
+                CONFIG_COEX_SEP_ANTENNAS=y OVERLAY_CONFIG="overlay-openthread.conf overlay-wifi-udp-client-thread-udp-client.conf"
     platform_allow: nrf5340dk_nrf5340_cpuapp
+    tags: ci_build
   sample.nrf7002_eb.thingy53.thread_coex:
     build_only: true
     extra_args: SHIELD=nrf7002eb 802154_rpmsg_SHIELD=nrf7002eb_coex
                 CONFIG_MPSL_CX=y 802154_rpmsg_CONFIG_MPSL_CX=y
-                CONFIG_COEX_SEP_ANTENNAS=y
+                CONFIG_COEX_SEP_ANTENNAS=y OVERLAY_CONFIG="overlay-openthread.conf overlay-wifi-udp-client-thread-udp-client.conf"
     integration_platforms:
       - thingy53_nrf5340_cpuapp
     platform_allow: thingy53_nrf5340_cpuapp
