--- a/samples/wifi/ble_coex/CMakeLists.txt
+++ b/samples/wifi/ble_coex/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2022 Nordic Semiconductor ASA
+# Copyright (c) 2024 Nordic Semiconductor ASA
 #
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
@@ -9,10 +9,12 @@ cmake_minimum_required(VERSION 3.20.0)
 set(DTC_OVERLAY_FILE "dts.overlay")
 
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(nrf_wifi_sta)
+project(nrf_wifi_thread_coex)
 
 target_sources(app PRIVATE
-	src/bt_throughput_test.c
+	src/ot_utils.c
+	src/zperf_utils.c
+	src/ot_coex_functions.c
 	src/main.c
 )
 
@@ -20,5 +22,3 @@ target_sources(app PRIVATE
 target_include_directories(app PUBLIC
 	${ZEPHYR_BASE}/subsys/net/ip
 )
-
-zephyr_library_include_directories(${ZEPHYR_BASE}/samples/bluetooth)
