samples: wifi: thread_coex: compliance check
comp check 2

Signed-off-by: Murali Thokala <Murali.Thokala@nordicsemi.no>

--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -1,18 +1,13 @@
 #
-# Copyright (c) 2023 Nordic Semiconductor ASA
+# Copyright (c) 2024 Nordic Semiconductor ASA
 #
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
-
 CONFIG_WIFI=y
 CONFIG_WIFI_NRF700X=y
 
 # WPA supplicant
 CONFIG_WPA_SUPP=y
-
-# System settings
-CONFIG_NEWLIB_LIBC=y
-CONFIG_NEWLIB_LIBC_NANO=n
 
 # Networking
 CONFIG_NETWORKING=y
@@ -22,7 +17,6 @@ CONFIG_NET_IPV4=y
 CONFIG_NET_UDP=y
 CONFIG_NET_TCP=y
 CONFIG_NET_DHCPV4=y
-
 
 CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=2
 CONFIG_NET_MAX_CONTEXTS=8
@@ -34,8 +28,6 @@ CONFIG_NET_L2_ETHERNET=y
 
 CONFIG_NET_CONFIG_SETTINGS=y
 CONFIG_NET_CONFIG_INIT_TIMEOUT=0
-
-
 
 # Memories
 CONFIG_MAIN_STACK_SIZE=4096
@@ -62,108 +54,53 @@ CONFIG_POSIX_MAX_FDS=16
 
 # Optimized networking settings for performance
 CONFIG_NET_TC_TX_COUNT=1
-#------------------------- UDP client
-CONFIG_NET_PKT_RX_COUNT=2
-CONFIG_NET_PKT_TX_COUNT=8
-CONFIG_NET_BUF_RX_COUNT=2
-CONFIG_NET_BUF_TX_COUNT=16
-#------------------------- UDP server
-CONFIG_NET_PKT_RX_COUNT=2
-CONFIG_NET_PKT_TX_COUNT=8
-CONFIG_NET_BUF_RX_COUNT=2
-CONFIG_NET_BUF_TX_COUNT=16
-#------------------------- TCP client and server
-CONFIG_NET_PKT_RX_COUNT=2
-CONFIG_NET_PKT_TX_COUNT=8
-CONFIG_NET_BUF_RX_COUNT=2
-CONFIG_NET_BUF_TX_COUNT=16
-#-------------------------
 CONFIG_HEAP_MEM_POOL_SIZE=200000
 CONFIG_NET_BUF_DATA_SIZE=1100
 
-# Below configs need to be modified based on security
-CONFIG_STA_KEY_MGMT_NONE=y
-# CONFIG_STA_KEY_MGMT_WPA2=y
-# CONFIG_STA_KEY_MGMT_WPA2_256=y
-# CONFIG_STA_KEY_MGMT_WPA3=y
-CONFIG_STA_SSID="wifi_sr_coex_24"
-CONFIG_STA_PASSWORD="12345678"
+# Below Wi-Fi configs need to be modified based on security
+CONFIG_WIFI_MGMT_EXT=y
+CONFIG_WIFI_CREDENTIALS=y
+CONFIG_WIFI_CREDENTIALS_STATIC=y
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="wifi_sr_coex_5"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="Mypassword"
+CONFIG_WIFI_CREDENTIALS_STATIC_TYPE_OPEN=y
+
 
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.168.1.99"
 CONFIG_NET_CONFIG_MY_IPV4_NETMASK="255.255.255.0"
 CONFIG_NET_CONFIG_MY_IPV4_GW="192.168.1.1"
 
-# DUT zperf configuration
-CONFIG_WIFI_ZPERF_PROT_UDP=y
+# DUT Wi-Fi zperf configuration
 CONFIG_WIFI_ZPERF_PKT_SIZE=1024
-CONFIG_WIFI_ZPERF_RATE=15000
-CONFIG_WIFI_ZPERF_SERVER=n
+CONFIG_WIFI_ZPERF_RATE=10000
 
 CONFIG_NRF700X_MAX_TX_PENDING_QLEN=12
-CONFIG_OT_EXTERNAL_ANTENNA=n
-CONFIG_COEX_TEST_DURATION=60000
+CONFIG_NRF_WIFI_LOW_POWER=y
+CONFIG_NRF700X_QSPI_LOW_POWER=n
 
-#CONFIG_WPA_SUPP_LOG_LEVEL_DBG=y
-
-#--------------------------- TWT
-# these two are commented as default in TWT module
-CONFIG_TWT_TRIGGER_ENABLE=n
-CONFIG_TWT_ANNOUNCED_MODE=n
-
-# set to 2 as default as part of sr_coex. So commented here.
-#CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=1
-# set to 8 as default as default as part of sr_coex. So commented here.
-#CONFIG_NET_MAX_CONTEXTS=5
-
-#CONFIG_PM=y
 CONFIG_LOG_BUFFER_SIZE=2048
 CONFIG_NET_MGMT_EVENT_QUEUE_TIMEOUT=5000
 
-CONFIG_TWT_ENABLE=n
-CONFIG_TWT_TRIGGER_ENABLE=n
-CONFIG_TWT_ANNOUNCED_MODE=n
-
-
-CONFIG_NRF_WIFI_LOW_POWER=y
-
-
-CONFIG_NRF700X_QSPI_LOW_POWER=n
-
-#================================
-CONFIG_OT_ROLE_CLIENT=y
-CONFIG_OT_CHANNEL=18
+# Thread configurations
+CONFIG_OT_CHANNEL=22
 CONFIG_OT_PAN_ID=1
 CONFIG_OT_PACKET_SIZE=256
-CONFIG_OT_RATE_BPS=10000
-CONFIG_OT_ZPERF_DURATION=60
+CONFIG_OT_RATE_BPS=65000
 
 # CONFIG_NETWORKING=y
 CONFIG_NET_ZPERF=y
 CONFIG_NET_LOG=y
-# CONFIG_NET_IPV6=y
-# CONFIG_NET_IPV4=y
-# CONFIG_NET_DHCPV4=n
-# CONFIG_NET_UDP=y
-# CONFIG_NET_TCP=y
-# CONFIG_NET_STATISTICS=y
 
-# CONFIG_NET_BUF_DATA_SIZE=1500
-# CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=4
-# CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=5
-# CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=1
-# CONFIG_NET_MAX_CONTEXTS=5
-# CONFIG_NET_TC_TX_COUNT=1
-# CONFIG_NET_SOCKETS=y
-# CONFIG_NET_SOCKETS_POSIX_NAMES=y
-# CONFIG_NET_SOCKETS_POLL_MAX=4
-# CONFIG_POSIX_MAX_FDS=8
+# To handle multiple interfaces.
+CONFIG_NET_CONFIG_SETTINGS=y
+CONFIG_NET_CONFIG_INIT_TIMEOUT=0
+CONFIG_NET_CONFIG_AUTO_INIT=n
 
-# CONFIG_INIT_STACKS=y
-# CONFIG_TEST_RANDOM_GENERATOR=y
+# test duration in milliseconds
+CONFIG_COEX_TEST_DURATION=30000
 
-# CONFIG_NET_L2_ETHERNET=y
-CONFIG_NET_SHELL=y
+CONFIG_NET_TCP_ISN_RFC6528=n
+CONFIG_LOG_MODE_IMMEDIATE=y
+CONFIG_MBEDTLS_MD=y
 
-# CONFIG_LOG=y
-# CONFIG_SHELL_CMDS_RESIZE=n
-#=================================
+CONFIG_NET_SOCKETS_POLL_MAX=10
