--- a/samples/wifi/thread_coex/sample.yaml
+++ b/samples/wifi/thread_coex/sample.yaml
@@ -37,7 +37,7 @@ tests:
                 CONFIG_MPSL_CX=y 802154_rpmsg_CONFIG_MPSL_CX=y
                 CONFIG_COEX_SEP_ANTENNAS=y OVERLAY_CONFIG="overlay-openthread.conf overlay-wifi-udp-client-thread-udp-client.conf"
     platform_allow: nrf5340dk/nrf5340/cpuapp
-
+    tags: ci_build
   sample.nrf7002_eb.thingy53.thread_coex:
     build_only: true
     extra_args: SHIELD=nrf7002eb 802154_rpmsg_SHIELD=nrf7002eb_coex
