samples: wifi: thread_coex: compliance check
thread coex compliance check11

compliance check

Signed-off-by: Murali Thokala <Murali.Thokala@nordicsemi.no>

--- a/samples/wifi/thread_coex/overlay-wifi-udp-client-thread-udp-server.conf
+++ b/samples/wifi/thread_coex/overlay-wifi-udp-client-thread-udp-server.conf
@@ -1,7 +1,7 @@
 # Optimized networking settings for performance
-CONFIG_NET_PKT_RX_COUNT=2
+CONFIG_NET_PKT_RX_COUNT=12
 CONFIG_NET_PKT_TX_COUNT=8
-CONFIG_NET_BUF_RX_COUNT=2
+CONFIG_NET_BUF_RX_COUNT=12
 CONFIG_NET_BUF_TX_COUNT=16
 
 # Wi-Fi zperf configuration
@@ -10,4 +10,9 @@ CONFIG_WIFI_ZPERF_SERVER=n
 
 # Thread zperf configuration
 CONFIG_OT_ZPERF_PROT_UDP=y
-CONFIG_OT_ROLE_CLIENT=y
+CONFIG_OT_ROLE_CLIENT=n
+
+# control log level
+CONFIG_OPENTHREAD_L2_LOG_LEVEL_OFF=y
+CONFIG_IEEE802154_DRIVER_LOG_LEVEL_OFF=y
+CONFIG_NET_PKT_LOG_LEVEL_OFF=y
