--- a/samples/wifi/thread_coex/prj.conf
+++ b/samples/wifi/thread_coex/prj.conf
@@ -61,7 +61,7 @@ CONFIG_NET_BUF_DATA_SIZE=1100
 CONFIG_WIFI_MGMT_EXT=y
 CONFIG_WIFI_CREDENTIALS=y
 CONFIG_WIFI_CREDENTIALS_STATIC=y
-CONFIG_WIFI_CREDENTIALS_STATIC_SSID="wifi_sr_coex_5"
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="Myssid"
 CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="Mypassword"
 CONFIG_WIFI_CREDENTIALS_STATIC_TYPE_OPEN=y
 
@@ -98,9 +98,5 @@ CONFIG_NET_CONFIG_AUTO_INIT=n
 
 # test duration in milliseconds
 CONFIG_COEX_TEST_DURATION=30000
-
-CONFIG_NET_TCP_ISN_RFC6528=n
-CONFIG_LOG_MODE_IMMEDIATE=y
-CONFIG_MBEDTLS_MD=y
 
 CONFIG_NET_SOCKETS_POLL_MAX=10
